# price-compare

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  render.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: aggregator.py  amazon_agent.py  base.py  flipkart_agent.py  salesforce_agent.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py
backend/app/routers/: agent.py  chat.py  identify.py  orders.py  products.py  recommendations.py
backend/app/services/: agent.py  agent_graph.py  amazon_search.py  cart.py  cart_analysis.py  flipkart_search.py  gemini.py  openrouter.py  otp.py  product_search.py  recommendations.py  salesforce.py  validate.py
backend/tests/: conftest.py  test_agent.py  test_agents.py  test_amazon_search.py  test_cart.py  test_flipkart_search.py  test_identify.py  test_openrouter.py  test_product_search.py  test_recommendations.py  test_routers.py  test_salesforce.py
backend/tests/fixtures/salesforce/: happy_path.json  partial_fields.json
docs/: ARCHITECTURE.md
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src/hooks/: useCart.tsx  useChat.ts  useInstallPrompt.ts  useProductSearch.ts  useRecommendations.ts  useRefresh.ts
frontend/src/lib/: api.ts  recommendation-hint.ts  source-theme.ts  strings.ts  suggestion-theme.ts  types.ts
frontend/src/pages/: App.tsx
frontend/src/styles/: index.css
frontend/tests/components/: CartDrawer.test.tsx  ChatInput.test.tsx  ChatWindow.test.tsx  ComparisonTable.test.tsx  MessageBubble.test.tsx  RatingStars.test.tsx  RecommendationsDrawer.test.tsx  RecommendedPicks.test.tsx  SourceBadge.test.tsx
frontend/tests/e2e/: comparison.spec.ts
frontend/tests/hooks/: useCart.test.tsx  useChat.test.ts  useInstallPrompt.test.ts  useProductSearch.test.ts  useRecommendations.test.ts  useRefresh.test.ts
frontend/tests/lib/: recommendation-hint.test.ts
worker/: .dev.vars.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
worker/scripts/: put-secrets.sh
worker/src/: env.ts  index.ts
worker/src/agent/: agent.ts  llm.ts  tools.ts  validate.ts
worker/src/agents/: aggregator.ts  base.ts  spokes.ts
worker/tests/: agent.test.ts  product_search.test.ts
(+34 files in other folders)
