[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "price-compare-backend"
version = "0.1.0"
requires-python = ">=3.11"
# Pinned to the tested versions for reproducible cloud builds (the Docker image
# installs this project with `pip install .`).
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    # Agent orchestration. langchain-core is pinned explicitly (langgraph pulls it
    # transitively) so cloud builds stay reproducible. We use only the StateGraph +
    # checkpointer core — NOT the full `langchain` meta-package — to keep the image
    # light.
    "langgraph==0.2.76",
    "langchain-core==0.3.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/*/  __init__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
